# ocr_error_filtering

./: README.md  pyproject.toml
.github/workflows/: CI.yml
src/ocr_error_filtering/: filter_image.py  filter_transcript.py  get_page_ids.py  pipeline.py
src/ocr_error_handling/: filter_transcript.py  pipeline.py
tests/: test_example.py  test_filter_transcript.py
tests/test_data/: error_transcript.csv
tests/test_data/transcript/: batch_1.csv  batch_2.csv
